some bugfixes for TIC5177

--- a/public/assets/stylesheets/print.css
+++ b/public/assets/stylesheets/print.css
@@ -1,6 +1,6 @@
 /*******************************************************************************
-    Druck-Stylesheet für Stud.IP
-    - nur pt Größenangaben verwenden
+    Druck-Stylesheet fï¿½r Stud.IP
+    - nur pt Grï¿½ï¿½enangaben verwenden
     - auf background-colors verzichten (werden nicht gedruckt)
 *******************************************************************************/
 html,
