batch move members to another statusgroup, re #6590

--- a/public/assets/stylesheets/less/statusgroups.less
+++ b/public/assets/stylesheets/less/statusgroups.less
@@ -4,6 +4,10 @@ section.course-statusgroups {
     float: left;
   }
 
+  td.memberactions {
+    text-align: right;
+  }
+
   footer {
 
     display: flex;
