clearer visualization of group member table in relation to content box, re #6590

--- a/public/assets/stylesheets/less/statusgroups.less
+++ b/public/assets/stylesheets/less/statusgroups.less
@@ -1,11 +1,31 @@
+@import url(../mixins/colors.less);
+
 section.course-statusgroups {
 
-  input.groupselector {
-    float: left;
-  }
+  article {
 
-  td.memberactions {
-    text-align: right;
+    input.groupselector {
+      float: left;
+    }
+
+    section {
+
+      border-left: 5px solid @content-color-20;
+      border-right: 5px solid @content-color-20;
+
+      table {
+        td {
+          span.member-invisible {
+            font-style: italic;
+            color: @light-gray-color;
+          }
+
+          &.memberactions {
+            text-align: right;
+          }
+        }
+      }
+    }
   }
 
   footer {
