--- a/public/assets/stylesheets/less/statusgroups.less
+++ b/public/assets/stylesheets/less/statusgroups.less
@@ -1,5 +1,3 @@
-@import url(../mixins/colors.less);
-
 section.course-statusgroups {
 
   article {
@@ -10,18 +8,45 @@ section.course-statusgroups {
 
     section {
 
-      border-left: 5px solid @content-color-20;
-      border-right: 5px solid @content-color-20;
+      border-left: 1px solid @content-color-20;
+      border-right: 1px solid @content-color-20;
 
       table {
-        td {
-          span.member-invisible {
-            font-style: italic;
-            color: @light-gray-color;
-          }
 
-          &.memberactions {
-            text-align: right;
+        thead {
+          tr {
+            th {
+              background-color: @content-color-20;
+            }
+          }
+        }
+
+        tbody {
+          tr {
+            td {
+              span.member-invisible {
+                font-style: italic;
+                color: @light-gray-color;
+              }
+
+              &.memberactions {
+                text-align: right;
+              }
+            }
+          }
+        }
+
+        tfoot {
+          tr {
+            td {
+              background-color: @content-color-20;
+              padding-left: 5px;
+              padding-right: 0;
+
+              &.memberactions {
+                text-align: right;
+              }
+            }
           }
         }
       }
@@ -34,8 +59,9 @@ section.course-statusgroups {
     flex-direction: row;
     align-items: center;
     padding: 5px;
-    background-color: #e7ebf1;
-    border-top: 1px solid #000000;
+    padding-left: 18px;
+    background-color: @content-color-20;
+    border-top: 1px solid @black;
 
     div.groupactions {
       margin-left: auto;
