--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -566,7 +566,7 @@ a.new-member {
     brightness(100% - hsvvalue(@base-color)+hsvvalue(#28497c));
 }
 
-#barTopMenu li a, div#layout-sidebar div.sidebar-image img {
+#barTopMenu li a img, #barTopMenu li a canvas, div#layout-sidebar div.sidebar-image img {
     .recolor;
 }
 
