--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -22,6 +22,7 @@
 @import "less/helpbar.less";
 @import "less/content_box.less";
 @import "less/badges.less";
+@import "less/actionmenu.less";
 
 @import "less/ajax.less";
 @import "less/autocomplete.less";
