re-introduce general header, increase footer text size, re #6590

--- a/public/assets/stylesheets/less/statusgroups.less
+++ b/public/assets/stylesheets/less/statusgroups.less
@@ -62,6 +62,7 @@ section.course-statusgroups {
     padding-left: 18px;
     background-color: @content-color-20;
     border-top: 1px solid @black;
+    font-size: medium;
 
     div.groupactions {
       margin-left: auto;
