--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -6093,6 +6093,9 @@ section.course-statusgroups footer {
   background-color: #e7ebf1;
   border-top: 1px solid #000000;
 }
+section.course-statusgroups footer {
+  font-size: medium;
+}
 section.course-statusgroups footer div.groupactions {
   margin-left: auto;
 }
