--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -22,53 +22,25 @@
     }
 
     #barBottomLeft {
-        padding-left: 15px;
-        padding-right: 15px;
-        white-space: nowrap;
+        padding: 0 15px;
         // Adds an arrow at the end
-        #arrow > .right(12px, @brand-color-lighter, 0);
+
         z-index: 2;
     }
 
+    #barBottomArrow {
+        #gradient > .horizontal(@brand-color-light, @brand-color-lighter);
+        #arrow > .right(12px, @brand-color-lighter, 0);
+        width: 30px;
+    }
+
     #barBottommiddle {
-        overflow: hidden;
-        padding-left: 30px;
         z-index: 1;
         flex: 1;
-        &:before {
-            // Adds the fading background to the left
-            #gradient > .horizontal(@brand-color-light, @brand-color-lighter);
-            content: "";
-            height: 24px;
-            margin-left: -30px;
-            width: 25px;
-        }
-    }
-
-    #barBottomright {
-        > ul { padding-left: 0;
-            justify-content: space-between;
-            list-style-type: none;
-            width: 100%;
-            > li {
-                margin: 0 2px;
-                &:hover .list {
-                    display: block;
-                    .item { opacity: 1; }
-                }
-                &.active > a {
-                    color: #fff;
-                }
-            }
-        }
+        white-space: nowrap;
+        overflow: hidden;
     }
 }
-
-#barBottomArrow {
-
-}
-
-
 
 #barBottomright, #layout_footer {
     a {
@@ -80,10 +52,12 @@
     > ul {
         display: flex;
         align-items: center;
-        float: right;
+        justify-content: space-between;
+        list-style-type: none;
         height: 100%;
-        li {
-            list-style-type: none;
+        padding: 0;
+        > li {
+            margin: 0 2px;
         }
     }
 }
