--- a/public/assets/stylesheets/less/layouts.less
+++ b/public/assets/stylesheets/less/layouts.less
@@ -82,15 +82,12 @@
 #layout_footer {
     background-color: @brand-color-lighter;
     border-top: 1px solid @brand-color-darker;
-    clear: both;
-    color: #fff;
-    margin: 0;
-    text-align: right;
+    color: @contrast-content-white;
+    display: flex;
+    padding: 2px 4px;
 }
 #footer {
-    color: @contrast-content-white;
-    float: left;
-    margin: 4px;
+    flex: 1;
 }
 
 #layout_wrapper {                // the main flex, dividing all elements into flexing rows
